--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
 /* src/index.css */
-@tailwind utilities;
+/* index.css (Tailwind v4) */
+@import "tailwindcss/utilities";
+
 
 
 /* Import Proxima Nova font */
@@ -10,6 +12,49 @@
 /* Set Proxima Nova as default font */
 * {
   font-family: 'Proxima Nova', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
+@layer utilities {
+
+  /* .btn-primary {
+    @apply
+  }
+
+  .btn-outline-primary {
+    @apply
+  } */
+
+  .text-primary {
+    @apply text-[#2a2a2a];
+  }
+
+  .text-secondary {
+    @apply text-[#5a5a5a];
+  }
+
+  .text-tertiary {
+    @apply text-[#777];
+  }
+
+  .text-accent {
+    @apply text-[#D35D38]
+  }
+
+  .bg-accent {
+    @apply bg-[#D35D38];
+  }
+
+  .bg-primary {
+    @apply bg-[#f5f5f5];
+  }
+
+  .bg-secondary {
+    @apply bg-[#f0f0f0];
+  }
+
+  .bg-tertiary {
+    @apply bg-[#e0e0e0];
+  }
 }
 
 .card {
